@@ -3,6 +3,7 @@ Changes for 2.0.1rc1
 New features:
 
 Bug fixes:
+..F....... [ZBX-4918] fixed value mapping for {ITEM.VALUE} and {ITEM.LASTVALUE} macros (Vedmak)
 ..F....... [ZBX-5013] fixed requirements check in frontend setup (Vedmak)
 A......... [ZBX-4923] fixed ids sorting before update and delete (Eduard)
 A......... [ZBX-5026] fixed error messages when creating IT Service (Eduard)
